🐛 Fixes horizontal scroll when scrollbars present
Fixes #105

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10176,6 +10176,7 @@ input[type=file]:invalid {
 #footer-container {
   background-color: #919191;
   border-top: 10px solid #154734;
+  padding: 10px;
   min-height: 350px;
   margin-top: 100px;
 }
@@ -10225,13 +10226,14 @@ footer > ul {
 #home-bottom {
   background-size: cover;
   min-height: 65vh;
-  padding-top: 10vh;
+  padding: 10vh 10px 10px;
   margin-bottom: -100px;
 }
 
 #stats {
   background-color: #E87500;
   color: white;
+  padding: 10px;
   min-height: 200px;
   opacity: 0.96;
 }
@@ -10247,6 +10249,7 @@ footer > ul {
 #home-top {
   background-size: cover;
   color: white;
+  padding: 10px;
   min-height: 60vh;
 }
 @media (max-width: 992px) {
