--- a/resources/assets/sass/_core.scss
+++ b/resources/assets/sass/_core.scss
@@ -450,6 +450,7 @@ input[type="file"]:invalid{
 #footer-container{
 	background-color: $gray-neutral;
 	border-top: 10px solid $utd-eco-green;
+	padding: 10px;
 	min-height: 350px;
 	margin-top: 100px;
 }
